--- a/plan/styles/header.css
+++ b/plan/styles/header.css
@@ -13,7 +13,7 @@ body {
   margin-left: 0px;
   margin-top: 0px;
   margin-right: 0px;
-  height: 2000px;
+  height: 3000px;
 }
 
 .introduction{
@@ -87,30 +87,55 @@ body {
   blink-caret .75s step-end infinite;
 }
 
-.row-1-container {
+.row {
   position: relative;
-  height: 460px;
+  height: 580px;
+  margin-bottom: 5px;
+}
+
+.row-2-container {
+  margin-bottom: 1px;
 }
 
 .barbell-caption {
   transition: white 1s ease;
   position: absolute;
-  right:2%;
-  top: 20%;
   font-size: 80px;
   font-family: IBMPlexSerif;
   font-weight: 600;
   width: 300px;
   z-index: 3;
+  color: red;
+}
+
+.barbell-1 {
+  right:2%;
+  top: 20%;
+  width: 350px;
+}
+
+.barbell-2 {
+  left: 4%;
+  top: 20%;
+}
+
+.barbell-3 {
+  right:15%;
+  top: 20%;
 }
 
 .barbell-caption.color-change {
-  color: white;
+  color: black;
 }
 
 .barbell-image {
   position: absolute;
   width: 80%;
+  white-space: nowrap;
+}
+
+.barbell-img-2 {
+  right: 0px;
 }
 
 .box {
@@ -118,13 +143,27 @@ body {
   opacity: 0;
   transform: translateX(400px);
   transition: all 1s ease; 
-  transition-delay: 1.5s;
+  transition-delay: 1s;
 
-  height: 100%;
-  background-image: linear-gradient(to right, rgb(255, 100, 100), rgb(255, 19, 19));
+  height: 101%;
+  background-color: white;
   right: 5px;
-  width: 400px;
+  width: 450px;
   z-index: 2;
+}
+
+.box.box-2 {
+  transform: translateX(-400px);
+  left: 0;
+  height: 100.2%;
+}
+
+.box-2 {
+  width: 420px;
+}
+
+.box-3 {
+  width: 500px;  
 }
 
 .box.show {
@@ -139,10 +178,8 @@ body {
 .plan-options-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   gap: 25%;
-
-  position:absolute;
-  bottom: 40%;
 
   width: 100%;
   min-width: 600px;
@@ -156,7 +193,6 @@ body {
   font-family: Roboto;
   font-weight: 700;
   font-size: 50px;
-  margin-left: 50%;
   padding: 20px 20px;
   transition: 1s;
   width: 300px;
