--- a/plan/styles/header.css
+++ b/plan/styles/header.css
@@ -13,7 +13,7 @@ body {
   margin-left: 0px;
   margin-top: 0px;
   margin-right: 0px;
-  height: 3000px;
+  height: 3120px;
 }
 
 .introduction{
@@ -131,7 +131,7 @@ body {
 .barbell-image {
   position: absolute;
   width: 80%;
-  white-space: nowrap;
+  min-width: 800px;
 }
 
 .barbell-img-2 {
@@ -176,49 +176,95 @@ body {
 }
 
 .plan-options-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 25%;
+  position: relative;
 
+  height: 600px;
+  min-width: 1100px;
+  min-height: 600px;
+  margin-top: 50px;
+  background-color: black;
+}
+
+.options-header {
+  position: absolute;
+  width: 950px;
+  margin-top: 20px;
+  font-size: 128px;
+  color: white;
+  font-family: IBMPlexSerif;
+  margin-left: 2%;
+}
+
+.existing-plans-container {
+  position: absolute;
+  left: 25%;
+  bottom: 15px;
+
+  width: 270px;
+  height: 405px;
+}
+
+.my-plans-img {
+  position: absolute;
   width: 100%;
-  min-width: 600px;
 }
 
 .existing-plans {
+  position: absolute;
+  left: 25%;
+  bottom: 5px;
+
+  width: 130px;
+  padding: 10px;
+  border: none;
   background: none;
-  border: solid;
-  color:  rgb(225, 174, 22);
-  cursor: pointer;
+  white-space: nowrap;
+  color: white;
   font-family: Roboto;
   font-weight: 700;
-  font-size: 50px;
-  padding: 20px 20px;
+  font-size: 24px;
   transition: 1s;
-  width: 300px;
+  cursor: pointer;
 }
 
 .existing-plans:hover {
-  background-color: rgb(225, 174, 22);
-  border: none;
-  color: white;
+  color: rgb(255, 58, 58);
+  transform: translateY(-3px);
+}
+
+.create-plan-container {
+  position: absolute;
+  right: 25%;
+  bottom: 15px;
+
+  width: 270px;
+  height: 405px;
+}
+
+.create-plan-img {
+  position: absolute;
+  width: 100%;
 }
 
 .new-plans {
+  position: absolute;
+  bottom: 5px;
+  left: 8%;
+
+  width: 220px;
+  padding: 10px;
+  border: none;
+  white-space: nowrap;
   background: none;
-  border: solid;
-  color: rgb(225, 174, 22);
-  cursor: pointer;
+  color: white;
   font-family: Roboto;
-  font-size: 50px;
+  font-size: 24px;
   font-weight: 700;
-  padding: 20px 20px;
   transition: 1s;
-  width: 500px;
+  cursor: pointer;
 }
 
 .new-plans:hover {
-  background-color: rgb(225, 174, 22);
-  border: none;
-  color: white;
+  color: rgb(255, 58, 58);
+  transform: translateY(-2px);
 }
