footer-main-page

--- a/plan/styles/header.css
+++ b/plan/styles/header.css
@@ -13,7 +13,8 @@ body {
   margin-left: 0px;
   margin-top: 0px;
   margin-right: 0px;
-  height: 3120px;
+  height: 3300px;
+  overflow-x: hidden;
 }
 
 .introduction{
@@ -267,4 +268,64 @@ body {
   font-weight: 700;
   transition: 1s;
   cursor: pointer;
+}
+
+.page-end {
+  font-family: Roboto;
+  font-weight: 700;
+  display: flex;
+  margin-top: 40px;
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
+  width: 33%;
+  margin-right: 30%;
+}
+
+.socials-header {
+  white-space: nowrap;
+}
+
+.icon {
+  width: 24px;
+  flex-wrap: nowrap;
+}
+
+.author-links-container {
+  display: flex;
+}
+
+.info-header {
+  white-space: nowrap;
+}
+
+.info-author {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.linkedin-link {
+  display: flex;
+}
+
+.author-icon-linkedIn {
+  width: 24px;
+}
+
+.github-link {
+  display: flex;
+}
+
+.author-icon-github {
+  width: 24px;
+}
+
+.contact {
+  font-size: 12px;
+  font-weight: 500;
+  color: rgb(110, 110, 110);
+  white-space: nowrap;
 }
